:fix: bug: 오류 및 개선사항 수정
- Message 엔티티를 messages 테이블에 매핑
- BusinessLogicException전용 핸들러 생성
- 사용자 삭제 시 메시지가 참조하는 사용자가 set null이 되도록 수정
- UserStatusDto 필드명을 API 스펙과 동일하게 수정
- 채널 삭제 로직 조건 수정
- 채널 조회에서 N+1 문제 해결
- 유저 정보 중복 검사 방식을 JPA 쿼리 메소드로 변경